writen test cases for Project service and figma service